--- a/templates/pages/company_info.html
+++ b/templates/pages/company_info.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+{% extends 'base.html' %}
+{% block content %}
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
@@ -9,7 +11,7 @@
     <a href="/company/">company info</a>
     <a href="/mysite">product</a>
 </nav>
-
 <h1>회사소개 페이지입니다.</h1>
 </body>
 </html>
+{% endblock %}
