--- a/templates/pages/mainpage.html
+++ b/templates/pages/mainpage.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+{% extends 'base.html' %}
+{% block content %}
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
@@ -6,10 +8,9 @@
 </head>
 <body>
 <nav>
-    <a href="/company/">company info</a>
-    <a href="/mysite/">product</a>
-</nav>
 
+</nav>
 <h1>메인 페이지입니다.</h1>
 </body>
 </html>
+{% endblock %}
